--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -526,6 +526,10 @@ version 5.10.1 (2016-06-16)
       "iat" not (pull request 12).
 
 version 5.11 (2016-07-11)
+    * Updates the OpenID AuthenticationRequest class to treat max_age=0 as
+      indicating prompt to (re)authenticate the end-user (equivalent to
+      prompt=login. An unspecified max_age is now denoted by -1 (previously 0).
+      See OpenID Connect WG issue #993 (issue #180).
     * Refactors the com.nimbusds.oauth2.sdk.auth.verifier package to support
       private_key_jwt authentication where the OAuth 2.0 client has registered
       a remote JWK set (jwks_uri) (issue #191).
