Nimbus JOSE+JWT v4.22 becomes the minimum dependency

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -533,4 +533,4 @@ version 5.11 (2016-07-11)
     * Refactors the com.nimbusds.oauth2.sdk.auth.verifier package to support
       private_key_jwt authentication where the OAuth 2.0 client has registered
       a remote JWK set (jwks_uri) (issue #191).
-
+    * Nimbus JOSE+JWT v4.22 becomes the minimum dependency.
