OIDCProviderMetadata.toJSONObject outputs members in order

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -561,3 +561,8 @@ version 5.16 (2016-08-25)
 
 version 5.16.1 (2016-08-26)
     * Upgrades to LangTag 1.4.1.
+
+version 5.17 (2016-08-30)
+    * OIDCProviderMetadata.toJSONObject outputs members in order.
+    * Adds new OrderedJSONObject utility class.
+
