--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -571,3 +571,9 @@ version 5.17.1 (2016-09-12)
     * Adds copyright and licence notice to source files.
     * Upgrades to Nimbus JOSE+JWT 4.26.1+
     * Upgrades to LangTag 1.4.3+
+
+version 5.17.2 (2016-10-27)
+    * Upgrades AES SIV mode lib minimal dependency to 1.1.1 (after Tim McClean
+      sec audit and updates).
+
+
