--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -576,4 +576,6 @@ version 5.17.2 (2016-10-27)
     * Upgrades AES SIV mode lib minimal dependency to 1.1.1 (after Tim McClean
       sec audit and updates).
 
-
+version 5.17.3 (2016-11-03)
+    * Fixes parsing of unquoted error code in WWW-Authenticate headers (issue
+      #197).
