--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -579,3 +579,7 @@ version 5.17.2 (2016-10-27)
 version 5.17.3 (2016-11-03)
     * Fixes parsing of unquoted error code in WWW-Authenticate headers (issue
       #197).
+
+version 5.17.4 (2016-11-04)
+    * Fixes missing OIDCClientMetadata override of
+      ClientMetadata.toJSONObject(boolean) (issue #198).
