--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -599,3 +599,7 @@ version 5.18.1 (2016-11-29)
       is null.
     * Upgrades to Nimbus JOSE+JWT 4.29.
 
+version 5.19 (2016-12-13)
+    * Produces more informative parse exceptions on malformed client basic
+      authentication (iss #201).
+
