--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -600,6 +600,6 @@ version 5.18.1 (2016-11-29)
     * Upgrades to Nimbus JOSE+JWT 4.29.
 
 version 5.19 (2016-12-13)
-    * Produces more informative parse exceptions on malformed client basic
-      authentication (iss #201).
+    * Produces more informative parse exceptions on malformed client secret
+      basic and client secret post authentication (iss #201).
 
