--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -603,3 +603,6 @@ version 5.19 (2016-12-13)
     * Produces more informative parse exceptions on malformed client secret
       basic and client secret post authentication (iss #201).
 
+version 5.19.1 (2016-12-15)
+    * Includes  RFC 6749, section 2.3.1 reference in parse exceptions on
+      malformed client secret basic authentication (iss #201).
