--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -606,3 +606,7 @@ version 5.19 (2016-12-13)
 version 5.19.1 (2016-12-15)
     * Includes  RFC 6749, section 2.3.1 reference in parse exceptions on
       malformed client secret basic authentication (iss #201).
+
+version 5.19.2 (2016-12-15)
+    * Appends detailed description in OAuth 2.0 error object on malformed
+      client secret basic authentication (iss #201).
