Refactors AuthenticationRequest to prevent incorrect use of PKCE (iss #202)

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -610,3 +610,11 @@ version 5.19.1 (2016-12-15)
 version 5.19.2 (2016-12-15)
     * Appends detailed description in OAuth 2.0 error object on malformed
       client secret basic authentication (iss #201).
+
+version 5.20 (2016-12-28)
+    * Refactors the AuthorizationRequest and the AuthenticationRequest builder
+      API to prevent incorrect use of PKCE (iss #202).
+    * Makes the CodeChallenge constructor private, adds static parse method to
+      recreate the code challenge from a string value on the server side (iss
+      #202).
+
