--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -622,4 +622,6 @@ version 5.21 (2017-01-18)
     * Updates TokenRequest.parse(HTTP request) to produce an invalid request
       error if multiple client authentication methods are found in the request
       (iss #203).
+    * Details InvalidClientException message on bad / expired JWT claims when
+      JWT authentication is verified (iss #204).
 
