--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -634,4 +634,7 @@ version 5.22.1 (2017-02-17)
     * Relaxes id_token_hint requirement in RP-initiated OpenID Connect
       LogoutRequest (iss #207).
 
+version 5.22.2 (2017-02-27)
+    * Fixes parsing of client secret basic authentication with illegal
+      application/x-www-form-urlencoded encoding (iss #208).
 
