--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -638,3 +638,5 @@ version 5.22.2 (2017-02-27)
     * Fixes parsing of client secret basic authentication with illegal
       application/x-www-form-urlencoded encoding (iss #208).
 
+version 5.23 (2017-03-05)
+    * Adds new ACRRequest.applyDefaultACRs method.
