--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -640,3 +640,4 @@ version 5.22.2 (2017-02-27)
 
 version 5.23 (2017-03-05)
     * Adds new ACRRequest.applyDefaultACRs method.
+    * Adds new ensureACRSupport method.
