--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -652,8 +652,10 @@ version 5.24.2 (2017-04-02)
     * Parses JOSE algorithms in OP, client and RP metadata by reference (iss
       #212).
 
-version 5.25 (2017-04-10)
+version 5.25 (2017-04-11)
     * Adds support for OpenID Connect Front-Channel Logout 1.0 (draft 02).
     * Adds support for OpenID Connect Back-Channel Logout 1.0 (draft 04).
+    * Upgraded JSON Smart dependency to support version range from 1.3.1 to
+      2.3.
 
 
