--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -658,4 +658,11 @@ version 5.25 (2017-04-11)
     * Upgraded JSON Smart dependency to support version range from 1.3.1 to
       2.3.
 
-
+version 5.26 (2017-04-26)
+    * Switches to constant time comparison of
+      com.nimbusds.oauth2.sdk.auth.Secret (iss #215).
+    * Adds new com.nimbusds.oauth2.sdk.auth.Secret.getSHA256 method.
+    * Switches to constant time SHA-256 based comparison of client_secret's in
+      com.nimbusds.oauth2.sdk.auth.verifier.ClientAuthenticationVerifier (iss
+      #215).
+    * Upgrades minimal Nimbus JOSE+JWT dependency to 4.37.
