--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -683,3 +683,6 @@ version 5.27.1 (2017-06-16)
 version 5.28 (2017-06-20)
     * Supports all Authentication Method References (AMR) defined in RFC 8176.
 
+version 5.29 (2017-06-29)
+    * Adds copy constructor to AuthenticationRequest.Builder.
+
