--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -684,5 +684,6 @@ version 5.28 (2017-06-20)
     * Supports all Authentication Method References (AMR) defined in RFC 8176.
 
 version 5.29 (2017-06-29)
+    * Adds copy constructor to AuthorizationRequest.Builder.
     * Adds copy constructor to AuthenticationRequest.Builder.
 
