--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -687,3 +687,6 @@ version 5.29 (2017-06-29)
     * Adds copy constructor to AuthorizationRequest.Builder.
     * Adds copy constructor to AuthenticationRequest.Builder.
 
+version 5.30 (2017-07-07)
+    * Adds UserInfo support for aggregated and distributed claims.
+
