--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -694,4 +694,5 @@ version 5.31 (2017-07-25)
     * Adds new StateHash class to represent state hash claims (s_hash) in ID
       tokens, see Financial Services – Financial API - Part 2: Read and Write
       API Security Profile.
+    * Adds StateHash getter and setter to IDTokenClaimsSet.
 
