Removes tls_client_auth_root_dn OAuth 2.0 client registration parameter

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -745,3 +745,6 @@ version 5.35 (2017-08-16)
     * Adds shorthand ClientMetadata.getRedirectionURI method for getting a
       single redirection URI.
 
+version 5.36 (2017-08-29)
+    * Removes tls_client_auth_root_dn OAuth 2.0 client registration parameter
+      (in anticipation of raft-ietf-oauth-mtls-04).
