Updates change log for 5.36.1

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -749,3 +749,10 @@ version 5.36 (2017-08-29)
     * Removes tls_client_auth_root_dn OAuth 2.0 client registration parameter
       (in anticipation of raft-ietf-oauth-mtls-04).
     * Upgrades minimal Nimbus JOSE+JWT dependency to 5.0+.
+
+version 5.36.1 (2017-10-03)
+    * Updates JavaDocs to state that the AuthorizationErrorResponse and the
+      AuthenticationErrorResponse classes are intended only for error
+      conditions which are allowed to be relayed back to the requesting OAuth
+      2.0 client / OpenID relying party (iss #222).
+
