ServletUtils.createHTTPRequest extracts the client IP address

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -758,3 +758,5 @@ version 5.36.1 (2017-10-03)
 
 version 5.37 (2017-10-07)
     * Adds HTTPMessage.getClientIPAddress and setClientIPAddress methods.
+    * ServletUtils.createHTTPRequest extracts the client IP address from the
+      ServletRequest.getRemoteAddr method.
