--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -801,3 +801,4 @@ version 5.43 (2017-12-19)
 
 version 5.44 (2017-12-25)
     * Adds UserInfoResponse.toSuccessResponse() and toErrorResponse() methods.
+    * Adds TokenResponse.toSuccessResponse() and toErrorResponse() methods.
