Adds URIUtils.removeTrailingSlash method

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -810,4 +810,5 @@ version 5.44 (2017-12-25)
       methods.
 
 version 5.45 (2018-01-01)
-    * Upgrades to org.apache.commons:commons-lang3:3.7
+    * Adds URIUtils.removeTrailingSlash(URI) method.
+    * Upgrades to org.apache.commons:commons-lang3:3.7.
