--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -825,3 +825,4 @@ version 5.47 (2018-02-04)
 
 version 5.48 (2018-02-09)
     * Adds TokenIntrospectionSuccessResponse.Builder copy constructor.
+    * Adds TokenIntrospectionSuccessResponse.getParameters method.
