--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -834,3 +834,6 @@ version 5.48 (2018-02-09)
 
 version 5.49 (2018-02-14)
     * Adds static X509CertificateConfirmation.of(X509Certificate) method.
+
+version version 5.50 (2018-02-14)
+    * Adds X509CertificateConfirmation.applyTo(JWTClaimsSet) method.
